--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.0.2",
+    "@pinia/nuxt": "^0.11.0",
     "@unhead/vue": "^2.0.8",
-    "nuxt": "^3.16.2"
+    "nuxt": "^3.16.2",
+    "pinia": "^3.0.2"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.3.0",
