--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "@pinia/nuxt": "^0.11.0",
     "@unhead/vue": "^2.0.8",
     "nuxt": "^3.16.2",
-    "pinia": "^3.0.2"
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.2.0"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.3.0",
