--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "pinia-plugin-persistedstate": "^4.2.0"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/eslint": "^1.3.0",
     "eslint": "^9.25.0",
     "typescript": "^5.8.3"
