--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.0.2",
     "@pinia/nuxt": "^0.11.0",
+    "@prisma/client": "^6.7.0",
     "@unhead/vue": "^2.0.8",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2",
