--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["fastapi[standard] (>=0.115.12,<0.116.0)", "pyjwt (>=2.10.1,<3.0.0)", "sqlalchemy[standart] (>=2.0.41,<3.0.0)", "pydantic-settings (>=2.9.1,<3.0.0)", "python-jose (>=3.5.0,<4.0.0)", "passlib (>=1.7.4,<2.0.0)", "sqladmin (>=0.20.1,<0.21.0)"]
+dependencies = ["fastapi[standard] (>=0.115.12,<0.116.0)", "pyjwt (>=2.10.1,<3.0.0)", "sqlalchemy[standart] (>=2.0.41,<3.0.0)", "pydantic-settings (>=2.9.1,<3.0.0)", "python-jose (>=3.5.0,<4.0.0)", "passlib (>=1.7.4,<2.0.0)", "sqladmin (>=0.20.1,<0.21.0)", "asyncpg (>=0.30.0,<0.31.0)"]
