--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
     volumes:
-      - ./logs:/app/logging
+      - ./logs/backend:/app/logging
     env_file:
       - ./backend/.env
     depends_on:
@@ -21,8 +21,10 @@ services:
       - ./frontend/.env
     container_name: frontend
     restart: always
-    expose:
-      - "3000"
+#    expose:
+#      - "3000"
+    ports:
+      - "3000:3000"
     depends_on:
       - backend
 
