--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,9 +2,11 @@ FROM node:24-alpine
 
 WORKDIR /app
 
+npm install -g pnpm
+
 COPY ./package*.json ./
 
-RUN npm install
+RUN pnpm install
 
 COPY . .
 RUN rm -rf ./.output
@@ -13,4 +15,4 @@ RUN rm -rf ./.nuxt
 EXPOSE 3000
 
 RUN npm run build
-CMD [ "npm", "run", "start" ]
+CMD [ "pnpm", "run", "start" ]
