--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,10 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/eslint": "^1.3.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
   }
 }
