--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,8 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4
-    ports:
-      - "5050:80"
+    expose:
+      - "5050"
     environment:
       PGADMIN_DEFAULT_EMAIL: dmitriy40647274@gmail.com
       PGADMIN_DEFAULT_PASSWORD: adminKufar2398
