--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,8 @@ server {
     }
 
 
-    location /api/_nuxt {
+
+    location /api/_nuxt|_ipx {
         proxy_pass http://frontend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
