--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,11 +34,11 @@ server {
 
 
 
-    location /api/_nuxt|_ipx {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+location ~ ^/(_nuxt|_ipx) {
+    proxy_pass http://frontend;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+}
 
 }
