--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "nuxt": "^3.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.2.0",
+    "sharp": "^0.34.2",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
