--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,48 +7,41 @@ upstream frontend {
 
 server {
     listen 80;
-    client_max_body_size 1000M;  # Set globally for this server block
+    server_name tradesynergy.ru www.tradesynergy.ru;
+    client_max_body_size 1000M;
 
     # Enable access and error logs
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    gzip on;
-    gzip_comp_level 4;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-
     location /.well-known/acme-challenge/ {
         root /var/www/html;
     }
 
+    # Redirect all HTTP traffic to HTTPS
     location / {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+        return 301 https://$host$request_uri;
     }
-
-    location /api {
-        proxy_pass http://backend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-
-    location ~ ^/(_nuxt|_ipx) {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
 }
 
 server {
-    listen 443;
-    client_max_body_size 1000M;  # Set globally for this server block
+    listen 443 ssl;
+    server_name www.tradesynergy.ru;
+
+    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+
+    # Redirect www to non-www
+    return 301 https://tradesynergy.ru$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name tradesynergy.ru;
+    client_max_body_size 1000M;
+
+    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
 
     # Enable access and error logs
     access_log /var/log/nginx/access.log;
@@ -57,11 +50,6 @@ server {
     gzip on;
     gzip_comp_level 4;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
 
     location / {
         proxy_pass http://frontend;
@@ -77,12 +65,10 @@ server {
         proxy_redirect off;
     }
 
-
     location ~ ^/(_nuxt|_ipx) {
         proxy_pass http://frontend;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
-
 }
