--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,8 +40,8 @@ server {
     server_name tradesynergy.ru;
     client_max_body_size 1000M;
 
-    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+#     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
 
     # Enable access and error logs
     access_log /var/log/nginx/access.log;
