--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,51 +24,51 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    server_name www.tradesynergy.ru;
+# server {
+#     listen 443 ssl;
+#     server_name www.tradesynergy.ru;
+#
+# #     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+# #     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+#
+#     # Redirect www to non-www
+#     return 301 https://tradesynergy.ru$request_uri;
+# }
 
-#     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-
-    # Redirect www to non-www
-    return 301 https://tradesynergy.ru$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name tradesynergy.ru;
-    client_max_body_size 1000M;
-
-#     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-
-    # Enable access and error logs
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    gzip on;
-    gzip_comp_level 4;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    location / {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location /api {
-        proxy_pass http://backend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location ~ ^/(_nuxt|_ipx) {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-}
+# server {
+#     listen 443 ssl;
+#     server_name tradesynergy.ru;
+#     client_max_body_size 1000M;
+#
+# #     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+# #     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+#
+#     # Enable access and error logs
+#     access_log /var/log/nginx/access.log;
+#     error_log /var/log/nginx/error.log;
+#
+#     gzip on;
+#     gzip_comp_level 4;
+#     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+#
+#     location / {
+#         proxy_pass http://frontend;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Host $host;
+#         proxy_redirect off;
+#     }
+#
+#     location /api {
+#         proxy_pass http://backend;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Host $host;
+#         proxy_redirect off;
+#     }
+#
+#     location ~ ^/(_nuxt|_ipx) {
+#         proxy_pass http://frontend;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Host $host;
+#         proxy_redirect off;
+#     }
+# }
