--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,27 +5,28 @@ upstream frontend {
     server frontend:3000;
 }
 
+# server {
+#     listen 80;
+#     server_name tradesynergy.ru www.tradesynergy.ru;
+#     client_max_body_size 1000M;
+#
+#     # Enable access and error logs
+#     access_log /var/log/nginx/access.log;
+#     error_log /var/log/nginx/error.log;
+#
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/html;
+#     }
+#
+#     # Redirect all HTTP traffic to HTTPS
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }
+# }
+
 server {
     listen 80;
-    server_name tradesynergy.ru www.tradesynergy.ru;
-    client_max_body_size 1000M;
-
-    # Enable access and error logs
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
-
-    # Redirect all HTTP traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443;
+#     listen 443 ssl;
     server_name www.tradesynergy.ru;
 
 #     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
@@ -36,7 +37,8 @@ server {
 }
 
 server {
-    listen 443;
+    listen 80;
+#     listen 443 ssl;
     server_name tradesynergy.ru;
     client_max_body_size 1000M;
 
