--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,17 +24,17 @@ upstream frontend {
 #     }
 # }
 
-server {
-    listen 80;
-#     listen 443 ssl;
-    server_name www.tradesynergy.ru;
-
-#     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-
-    # Redirect www to non-www
-    return 301 https://tradesynergy.ru$request_uri;
-}
+# server {
+#     listen 80;
+# #     listen 443 ssl;
+#     server_name www.tradesynergy.ru;
+#
+# #     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+# #     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+#
+#     # Redirect www to non-www
+#     return 301 https://tradesynergy.ru$request_uri;
+# }
 
 server {
     listen 80;
@@ -52,6 +52,10 @@ server {
     gzip on;
     gzip_comp_level 4;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
 
     location / {
         proxy_pass http://frontend;
