--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,17 +24,17 @@ upstream frontend {
 #     }
 # }
 
-# server {
-#     listen 80;
-# #     listen 443 ssl;
-#     server_name www.tradesynergy.ru;
-#
-# #     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-# #     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-#
-#     # Redirect www to non-www
-#     return 301 https://tradesynergy.ru$request_uri;
-# }
+server {
+    listen 80;
+#     listen 443 ssl;
+    server_name www.tradesynergy.ru;
+
+#     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+
+    # Redirect www to non-www
+    return 301 https://tradesynergy.ru$request_uri;
+}
 
 server {
     listen 80;
