--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ server {
 #     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
 
     # Redirect www to non-www
-    return 301 https://tradesynergy.ru$request_uri;
+    return 301 http://tradesynergy.ru$request_uri;
 }
 
 server {
