--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,10 +45,12 @@ services:
     image: certbot/certbot
     volumes:
       - ./nginx/letsencrypt:/etc/letsencrypt
-      - ./nginx/webroot:/var/www/html  # Same volume as nginx
-    command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive --dry-run
+      - ./nginx/webroot:/var/www/html
+    command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive
     depends_on:
       - nginx
+
+
   pgadmin:
     image: dpage/pgadmin4
     expose:
