--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,80 +14,75 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
 
-    location / {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+return 301 https://$server_name$request_uri;
+}
 
-    location /api {
-        proxy_pass http://backend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+server {
+    listen 443 ssl;
+    server_name www.tradesynergy.ru;
+    client_max_body_size 1000M;
 
-    location ~ ^/(_nuxt|_ipx) {
-        proxy_pass http://frontend;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
+     # Пути к сертификатам (Certbot автоматически обновит их)
+     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+
+return 301 https://tradesynergy.ru;
 }
 
 # # HTTPS-сервер (основной)
-  # server {
-  #     listen 443 ssl;
-  #     server_name tradesynergy.ru www.tradesynergy.ru;
-  #
-  #     # Пути к сертификатам (Certbot автоматически обновит их)
-  #     ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
-  #     ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
-  #
-  #     # Настройки SSL
-  #     ssl_protocols TLSv1.2 TLSv1.3;
-  #     ssl_prefer_server_ciphers on;
-  #     ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
-  #
-  #     client_max_body_size 1000M;
-  #     access_log /var/log/nginx/access.log;
-  #     error_log /var/log/nginx/error.log;
-  #
-  #     gzip on;
-  #     gzip_comp_level 4;
-  #     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-  #
-  #     # Редирект с www на основной домен (уже на HTTPS)
-  #     if ($host = www.tradesynergy.ru) {
-  #         return 301 https://tradesynergy.ru$request_uri;
-  #     }
-  #
-  #     # Обработка фронтенда (Nuxt.js)
-  #     location / {
-  #         proxy_pass http://frontend;
-  #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #         proxy_set_header Host $host;
-  #         proxy_redirect off;
-  #     }
-  #
-  #     # Обработка API (бэкенд)
-  #     location /api {
-  #         proxy_pass http://backend;
-  #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #         proxy_set_header Host $host;
-  #         proxy_redirect off;
-  #     }
-  #
-  #     # Статика Nuxt.js
-  #     location ~ ^/(_nuxt|_ipx) {
-  #         proxy_pass http://frontend;
-  #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  #         proxy_set_header Host $host;
-  #         proxy_redirect off;
-  #     }
-  # }
+  server {
+      listen 443 ssl;
+      server_name tradesynergy.ru www.tradesynergy.ru;
+
+      # Пути к сертификатам (Certbot автоматически обновит их)
+      ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+      ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
+
+      # Настройки SSL
+      ssl_protocols TLSv1.2 TLSv1.3;
+      ssl_prefer_server_ciphers on;
+      ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
+
+      client_max_body_size 1000M;
+      access_log /var/log/nginx/access.log;
+      error_log /var/log/nginx/error.log;
+
+      gzip on;
+      gzip_comp_level 4;
+      gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+      # Редирект с www на основной домен (уже на HTTPS)
+      if ($host = www.tradesynergy.ru) {
+          return 301 https://tradesynergy.ru$request_uri;
+      }
+
+      # Обработка фронтенда (Nuxt.js)
+      location / {
+          proxy_pass http://frontend;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $host;
+          proxy_redirect off;
+      }
+
+      # Обработка API (бэкенд)
+      location /api {
+          proxy_pass http://backend;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $host;
+          proxy_redirect off;
+      }
+
+      # Статика Nuxt.js
+      location ~ ^/(_nuxt|_ipx) {
+          proxy_pass http://frontend;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $host;
+          proxy_redirect off;
+      }
+  }
