--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,12 @@ services:
       - "8000"
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
+      DEV_REDIRECT_URL: "http://frontend:3000"
     volumes:
       - ./logs/backend:/app/logging
     env_file:
       - ./backend/.env
+
     depends_on:
       - db
 
