--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to production
 
 on:
   push:
-    branches: [ "main" ] # Или другая ветка, которую вы используете
+    branches: [ "master" ]
 
 jobs:
   deploy:
