--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,14 +43,14 @@ services:
       - backend
       - frontend
 
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - ./nginx/letsencrypt:/etc/letsencrypt
-      - ./nginx/webroot:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive
-    depends_on:
-      - nginx
+#  certbot:
+#    image: certbot/certbot
+#    volumes:
+#      - ./nginx/letsencrypt:/etc/letsencrypt
+#      - ./nginx/webroot:/var/www/html
+#    command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive
+#    depends_on:
+#      - nginx
 
 
   pgadmin:
