clean old images

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,11 +52,11 @@ jobs:
             fi
           "
 
-      - name: Clean up old images
-        run: |
-          ssh target-server "
-            # Очистка неиспользуемых образов
-            echo '🧹 Очистка неиспользуемых Docker образов...'
-            docker image prune -af
-            echo '✅ Очистка завершена.'
-          "
+#      - name: Clean up old images
+#        run: |
+#          ssh target-server "
+#            # Очистка неиспользуемых образов
+#            echo '🧹 Очистка неиспользуемых Docker образов...'
+#            docker image prune -af
+#            echo '✅ Очистка завершена.'
+#          "
