--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
             
             # 4. Проверяем ОСНОВНЫЕ контейнеры (не все!)
             REQUIRED_CONTAINERS='backend frontend nginx'  # ← Укажите здесь нужные сервисы
-            if docker compose ps --status running | grep -qE "(${REQUIRED_CONTAINERS// /|})"; then
+            if docker compose ps --status running | grep -qE \"(${REQUIRED_CONTAINERS// /|})\"; then
               echo '✅ Основные контейнеры запущены! Фиксируем изменения.' && \
               git reset --hard origin/master
             else
@@ -51,12 +51,3 @@ jobs:
               exit 1
             fi
           "
-
-#      - name: Clean up old images
-#        run: |
-#          ssh target-server "
-#            # Очистка неиспользуемых образов
-#            echo '🧹 Очистка неиспользуемых Docker образов...'
-#            docker image prune -af
-#            echo '✅ Очистка завершена.'
-#          "
