clean old images

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,3 +51,12 @@ jobs:
               exit 1
             fi
           "
+
+      - name: Clean up old images
+        run: |
+          ssh target-server "
+            # Очистка неиспользуемых образов
+            echo '🧹 Очистка неиспользуемых Docker образов...'
+            docker image prune -af
+            echo '✅ Очистка завершена.'
+          "
