--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,18 @@
-[project]
+[tool.poetry]
 name = "backend"
 version = "0.1.0"
-description = "Add your description here"
+description = ""
+authors = ["dmiv <dmitriy40647274@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = ["fastapi[standard] (>=0.115.12,<0.116.0)", "pyjwt (>=2.10.1,<3.0.0)", "sqlalchemy[standart] (>=2.0.41,<3.0.0)", "pydantic-settings (>=2.9.1,<3.0.0)", "python-jose (>=3.5.0,<4.0.0)", "passlib (>=1.7.4,<2.0.0)", "sqladmin (>=0.20.1,<0.21.0)", "asyncpg (>=0.30.0,<0.31.0)"]
+
+[tool.poetry.dependencies]
+python = "^3.12"
+fastapi = "^0.115.12"
+sqlalchemy = "^2.0.41"
+alembic = "^1.16.1"
+pydantic-settings = "^2.9.1"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
