--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=sqlite:///./database.db
+SQLALCHEMY_DATABASE_URI=sqlite:///./database.db
+SECRET_KEY=your-secure-secret-key
+FRONTEND_URL=http://localhost:3000
