--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/i18n": "^10.0.0-beta.10",
     "@pinia/nuxt": "0.11.1",
     "@prisma/client": "^6.8.1",
     "@unhead/vue": "^2.0.8",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/eslint": "^1.3.0",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "postcss": "^8.5.4",
