--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ python-multipart = "^0.0.20"
 pydantic = {extras = ["email"], version = "^2.11.5"}
 fastapi-mail = "^1.5.0"
 diskcache = "^5.6.3"
+uvicorn = "^0.34.3"
 
 
 [build-system]
