--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,8 @@ services:
   backend:
     build: ./backend
     restart: on-failure
-#    expose:
-#      - "8000"
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
       DEV_REDIRECT_URL: "http://frontend:3000"
@@ -27,10 +25,8 @@ services:
       - ./frontend/.env
     container_name: frontend
     restart: always
-#    expose:
-#      - "3000"
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     depends_on:
       - backend
 
