--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,13 +27,12 @@
     "nuxt": "^3.12.2",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "sharp": "^0.34.2",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/eslint": "^1.3.0",
-    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@nuxtjs/tailwindcss": "^6.6.5",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "postcss": "^8.5.4",
