--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,11 +32,11 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@nuxt/eslint": "^1.3.0",
-    "@nuxtjs/tailwindcss": "^6.6.5",
+    "@tailwindcss/postcss": "^4.1.10",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
   }
 }
