--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,10 @@ services:
       - ./frontend/.env
     container_name: frontend
     restart: always
-    expose:
-      - "3000"
+#    expose:
+#      - "3000"
+    ports:
+      - "3000:3000"
     depends_on:
       - backend
 
