--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ./logs/backend:/app/logging
       - ./backend/cache:/app/cache
+      - ./backend/database.db:/app/database.db
     env_file:
       - ./backend/.env
 
