--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ pydantic = {extras = ["email"], version = "^2.11.5"}
 fastapi-mail = "^1.5.0"
 diskcache = "^5.6.3"
 uvicorn = "^0.34.3"
+aiofiles = "^24.1.0"
 
 
 [build-system]
