--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ fastapi-mail = "^1.5.0"
 diskcache = "^5.6.3"
 uvicorn = "^0.34.3"
 aiofiles = "^24.1.0"
+python-slugify = "^8.0.4"
 
 
 [build-system]
