--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,3 +8,4 @@ RUN rm /etc/nginx/conf.d/default.conf
 FROM nginx:1.25
 COPY --from=builder /etc/nginx /etc/nginx
 COPY nginx.conf /etc/nginx/conf.d/
+COPY letsencrypt /etc/nginx/letsencrypt/
