--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,15 @@ server {
     error_log /var/log/nginx/error.log;
 
 
+    # Разрешить доступ к ACME Challenge для Certbot
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+
+
+
 return 301 https://$server_name$request_uri;
 }
 
