--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,6 +32,12 @@ server {
     server_name www.tradesynergy.ru;
     client_max_body_size 1000M;
 
+    # Разрешить доступ к ACME Challenge для Certbot
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
      # Пути к сертификатам (Certbot автоматически обновит их)
      ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
@@ -48,6 +54,12 @@ return 301 https://tradesynergy.ru;
   server {
       listen 443 ssl;
       server_name tradesynergy.ru www.tradesynergy.ru;
+
+    # Разрешить доступ к ACME Challenge для Certbot
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
 
       # Пути к сертификатам (Certbot автоматически обновит их)
       ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
@@ -71,24 +83,31 @@ return 301 https://tradesynergy.ru;
           return 301 https://tradesynergy.ru$request_uri;
       }
 
-      # Обработка фронтенда (Nuxt.js)
-      location / {
-          proxy_pass http://frontend;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header Host $host;
-          proxy_redirect off;
-      }
-
       # Обработка API (бэкенд)
-      location /api {
+      location ~ ^(/(/api|admin) {
           proxy_pass http://backend;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $host;
           proxy_redirect off;
       }
 
+
       # Статика Nuxt.js
       location ~ ^/(_nuxt|_ipx) {
+          proxy_pass http://frontend;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header Host $host;
+          proxy_redirect off;
+      }
+
+      location /uploads {
+          alias /app/uploads/;
+      }
+
+      location / {
+
+      # Обработка фронтенда (Nuxt.js)
+      location / {
           proxy_pass http://frontend;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header Host $host;
