--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,7 +47,7 @@ server {
     return 301 https://tradesynergy.ru;
 }
 
-# # HTTPS-сервер (основной)
+# HTTPS-сервер (основной)
 server {
     listen 443 ssl;
     server_name tradesynergy.ru www.tradesynergy.ru;
