--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ server {
 
     # Handle ACME Challenge first
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /var/www/html;
         try_files $uri =404;
     }
 
@@ -33,7 +33,7 @@ server {
 
     # Разрешить доступ к ACME Challenge для Certbot
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /var/www/html;
         try_files $uri =404;
     }
 
@@ -54,7 +54,7 @@ server {
 
     # Разрешить доступ к ACME Challenge для Certbot
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        root /var/www/html;
         try_files $uri =404;
     }
 
