the name of directory

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,8 +38,8 @@ server {
     }
 
     # Пути к сертификатам (Certbot автоматически обновит их)
-    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru-0001/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru-0001/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
@@ -59,8 +59,8 @@ server {
     }
 
     # Пути к сертификатам (Certbot автоматически обновит их)
-    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru-0001/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru-0001/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/tradesynergy.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tradesynergy.ru/privkey.pem;
 
     # Настройки SSL
     ssl_protocols TLSv1.2 TLSv1.3;
