--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
-
   backend:
     build: ./backend
-    restart: on-failure
-    expose:
-      - "8000"
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db/postgres"
       DEV_REDIRECT_URL: "http://frontend:3000"
@@ -14,25 +13,24 @@ services:
       - ./backend/database.db:/app/database.db
       - ./backend/uploads:/app/uploads
       - ./backend/app/static:/app/app/static
-
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   frontend:
     build: ./frontend
     env_file:
       - ./frontend/.env
-    container_name: frontend
-    restart: always
-#    expose:
-#      - "3000"
+    restart: unless-stopped
     ports:
       - "3000:3000"
     depends_on:
-      - backend
+      backend:
+        condition: service_started
 
   nginx:
     build: ./nginx
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
@@ -47,33 +45,31 @@ services:
 
   certbot:
     image: certbot/certbot
+    restart: unless-stopped
     volumes:
       - ./nginx/letsencrypt:/etc/letsencrypt
       - ./nginx/webroot:/var/www/html
     command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive --force-renewal --cert-name tradesynergy.ru
     depends_on:
-      - nginx
-
+      nginx:
+        condition: service_started
 
   pgadmin:
     image: dpage/pgadmin4
-    expose:
-      - "5050"
+    restart: unless-stopped
+    ports:
+      - "5050:5050"
     environment:
       PGADMIN_DEFAULT_EMAIL: dmitriy40647274@gmail.com
       PGADMIN_DEFAULT_PASSWORD: adminKufar2398
 
   db:
     image: postgres:17-alpine
-    ports:
-      - "5432:5432"
-    env_file:
-      - ./backend/.env
+    restart: unless-stopped
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
       POSTGRES_DB: "postgres"
-
     command: >
       -c shared_buffers=512MB
       -c max_connections=200
@@ -81,6 +77,8 @@ services:
       -c tcp_keepalives_idle=60
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres -d postgres" ]
-
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - ./postgres-data:/var/lib/postgresql/data:cached
