--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,16 +43,16 @@ services:
       - backend
       - frontend
 
-  certbot:
-    image: certbot/certbot
-    restart: unless-stopped
-    volumes:
-      - ./nginx/letsencrypt:/etc/letsencrypt
-      - ./nginx/webroot:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive --force-renewal --cert-name tradesynergy.ru
-    depends_on:
-      nginx:
-        condition: service_started
+#  certbot:
+#    image: certbot/certbot
+#    restart: unless-stopped
+#    volumes:
+#      - ./nginx/letsencrypt:/etc/letsencrypt
+#      - ./nginx/webroot:/var/www/html
+#    command: certonly --webroot --webroot-path=/var/www/html -d tradesynergy.ru -d www.tradesynergy.ru --email evgenijsemakin001@mail.ru --agree-tos --non-interactive --force-renewal --cert-name tradesynergy.ru
+#    depends_on:
+#      nginx:
+#        condition: service_started
 
   pgadmin:
     image: dpage/pgadmin4
