certbot don't run automatically

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,7 @@ jobs:
           
           # Build and run with health checks
           echo "🛠 Building and starting containers..."
-          if docker compose build --no-cache && docker compose up -d; then
+          if docker compose build --no-cache && docker compose up -d nginx; then
             # Wait for containers to initialize
             sleep 30
             
@@ -112,14 +112,14 @@ jobs:
               echo "❌ Not all containers started! Rolling back..."
               git reset --hard $current_commit
               docker compose down
-              docker compose up -d
+              docker compose up -d nginx
               exit 1
             fi
           else
             echo "❌ Build/start failed! Rolling back..."
             git reset --hard $current_commit
             docker compose down
-            docker compose up -d
+            docker compose up -d nginx
             exit 1
           fi
           EOF
