--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -129,6 +129,6 @@ jobs:
         run: |
           ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@${{ secrets.SERVER_IP }} << 'EOF'
           echo "🧹 Очистка неиспользуемых Docker образов..."
-          docker system prune -af --volumes || true
+          docker system prune -af || true
           echo "✅ Очистка завершена."
           EOF
