--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     build: ./frontend
     env_file:
       - ./frontend/.env
+    environment:
+      NUXT_UI_FONTS: "false"
     restart: unless-stopped
     ports:
       - "3000:3000"
